--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res"
+   ]
   },
   {
    "cell_type": "markdown",
