Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp = requests.get"
+    "resp = requests.get('www.yelp.')"
    ]
   },
   {
