Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp = requests.get('www.yelp.com')"
+    "resp = requests.get('https://api.yelp.com/v3/businesses/search')"
    ]
   },
   {
