Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,6 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set up "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "resp = requests.get('https://api.yelp.com/v3/businesses/search')"
    ]
   },
