--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up parameters\n"
+    "# Set up parameters\n",
+    "\n",
+    "def get_keys(path):\n",
+    "    with open(path) as f:\n",
+    "        return json.load(f)\n",
+    "\n",
+    "# NOTE: please change the file path to be your root directory; not Cristian's :) \n",
+    "keys = get_keys(\"~/.somefolder/yelp_api.json\")\n",
+    "\n",
+    "client_id = keys['client_id']\n",
+    "api_key = keys['api_key']"
    ]
   },
   {
