--- a/index.ipynb
+++ b/index.ipynb
@@ -44,12 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "import requests"
+    "import requests\n",
+    "import json"
    ]
   },
   {
