Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "# Set up parameters\n",
-    "path = '.secrets/'\n",
+    "path = '/.secrets/creds.json'\n",
     "\n",
     "def get_keys(path):\n",
     "    with open(path) as f:\n",
