--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
     "        return json.load(f)\n",
     "\n",
     "# NOTE: please change the file path to be your root directory; not Cristian's :) \n",
-    "keys = get_keys(\"~/.somefolder/yelp_api.json\")\n",
+    "keys = get_keys(path)\n",
     "\n",
     "client_id = keys['client_id']\n",
     "api_key = keys['api_key']"
