Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp = requests.get('https://api.yelp.com/v3/businesses/search')"
+    "resp = requests.get('https://api.yelp.com/v3/businesses/search')\n",
+    "headers = {\n",
+    "        'Authorization': 'Bearer {}'.format(api_key),\n",
+    "    }\n",
+    "\n",
+    "url_params = {\n",
+    "                'term': term.replace(' ', '+'),\n",
+    "                'location': location.replace(' ', '+'),\n",
+    "                'limit': SEARCH_LIMIT\n",
+    "            }\n",
+    "response = requests.get(url, headers=headers, params=url_params)\n",
+    "print(response)\n",
+    "print(type(response.text))\n",
+    "print(response.text[:1000])"
    ]
   },
   {
