Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,16 @@
     "        return json.load(f)\n",
     "\n",
     "# NOTE: please change the file path to be your root directory; not Cristian's :) \n",
-    "keys = get_keys(path)\n",
+    "keys = get_keys(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "client_id = keys['client_id']\n",
     "api_key = keys['api_key']"
