--- a/index.ipynb
+++ b/index.ipynb
@@ -63,6 +63,9 @@
     "path = '/.secrets/creds.json'\n",
     "\n",
     "def get_keys(path):\n",
+    "    with open(path)\n",
+    "\n",
+    "def get_keys(path):\n",
     "    with open(path) as f:\n",
     "        return json.load(f)\n",
     "\n",
