Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,8 @@
     "path = '/.secrets/creds.json'\n",
     "\n",
     "def get_keys(path):\n",
-    "    with open(path)\n",
+    "    with open(path) as f:\n",
+    "        return json.load(f)\n",
     "\n",
     "def get_keys(path):\n",
     "    with open(path) as f:\n",
