--- a/index.ipynb
+++ b/index.ipynb
@@ -66,16 +66,9 @@
     "    with open(path) as f:\n",
     "        return json.load(f)\n",
     "\n",
-    "keys = get_keys(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# \n",
+    "keys = get_keys(path)\n",
+    "\n",
+    "\n",
     "\n",
     "client_id = keys['client_id']\n",
     "api_key = keys['api_key']"
