Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,6 +60,8 @@
    "outputs": [],
    "source": [
     "# Set up parameters\n",
+    "\n",
+    "# Key\n",
     "path = '/.secrets/creds.json'\n",
     "\n",
     "def get_keys(path):\n",
@@ -67,9 +69,6 @@
     "        return json.load(f)\n",
     "\n",
     "keys = get_keys(path)\n",
-    "\n",
-    "\n",
-    "\n",
     "client_id = keys['client_id']\n",
     "api_key = keys['api_key']"
    ]
