Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "# Set up parameters\n",
     "\n",
-    "# Key\n",
+    "# API Key\n",
     "path = '/.secrets/creds.json'\n",
     "\n",
     "def get_keys(path):\n",
