Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp = requests.get('https://api.yelp.com/v3/businesses/search')\n",
+    "# Headers\n",
     "headers = {\n",
     "        'Authorization': 'Bearer {}'.format(api_key),\n",
     "    }\n",
