--- a/index.ipynb
+++ b/index.ipynb
@@ -84,6 +84,7 @@
     "        'Authorization': 'Bearer {}'.format(api_key),\n",
     "    }\n",
     "\n",
+    "# Parameters\n",
     "url_params = {\n",
     "                'term': term.replace(' ', '+'),\n",
     "                'location': location.replace(' ', '+'),\n",
