--- a/index.ipynb
+++ b/index.ipynb
@@ -85,6 +85,10 @@
     "    }\n",
     "\n",
     "# Parameters\n",
+    "term = 'Mexican'\n",
+    "location = 'Astoria NY'\n",
+    "SEARCH_LIMIT = 10\n",
+    "\n",
     "url_params = {\n",
     "                'term': term.replace(' ', '+'),\n",
     "                'location': location.replace(' ', '+'),\n",
