Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,9 +85,9 @@
     "    }\n",
     "\n",
     "# Parameters\n",
-    "term = 'Mexican'\n",
-    "location = 'Astoria NY'\n",
-    "SEARCH_LIMIT = 10\n",
+    "term = 'Filipino'\n",
+    "location = 'Seattle'\n",
+    "SEARCH_LIMIT = 50\n",
     "\n",
     "url_params = {\n",
     "                'term': term.replace(' ', '+'),\n",
