Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,7 @@
     "    }\n",
     "\n",
     "# Parameters\n",
-    "term = 'Filipino'\n",
+    "term = 'Filipino Food'\n",
     "location = 'Seattle'\n",
     "SEARCH_LIMIT = 50\n",
     "\n",
