Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,9 @@
     "\n",
     "keys = get_keys(path)\n",
     "client_id = keys['client_id']\n",
-    "api_key = keys['api_key']"
+    "api_key = keys['api_key']\n",
+    "\n",
+    "keys = get_keys(os.path.join(os.environ['HOME'], '.secret/yelp_api.json'))"
    ]
   },
   {
