--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
     "    with open(path) as f:\n",
     "        return json.load(f)\n",
     "\n",
-    "keys = get_keys(os.path.join(os.environ['HOME'], '.secret/yelp_api.json'))\n",
+    "keys = get_keys(os.path.join(os.environ['E'], '.secret/yelp_api.json'))\n",
     "client_id = keys['client_id']\n",
     "api_key = keys['api_key']\n"
    ]
