--- a/index.ipynb
+++ b/index.ipynb
@@ -56,19 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/learn-env/bin:/opt/conda/envs/learn-env/bin:/opt/conda/condabin:/var/opt/rails/bin:/var/opt/httpserver/bin:/var/opt/atom/bin:/var/opt/shotgun/bin:/var/opt/rackup/bin:/var/opt/jekyll/bin:/usr/local/rvm/gems/ruby-2.6.1/bin:/usr/local/rvm/gems/ruby-2.6.1@global/bin:/usr/local/rvm/rubies/ruby-2.6.1/bin:/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games:/usr/local/rvm/bin\n"
+      "/home/werlindo\n"
      ]
     }
    ],
    "source": [
-    "print(os.environ[\"PATH\"])"
+    "print(os.environ[\"HOME\"])"
    ]
   },
   {
