Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,6 +73,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/werlindo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.environ[\"HOME\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
