Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,19 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/werlindo\n"
+      "werlindo\n"
      ]
     }
    ],
    "source": [
-    "print(os.getenv(\"HOME\"))"
+    "print(os.getenv(\"LOGNAME\"))"
    ]
   },
   {
