Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,7 @@
     "    with open(path) as f:\n",
     "        return json.load(f)\n",
     "\n",
-    "keys = get_keys(os.path.join('//Users/', os.getenv(\"LOGNAME\"), '.secret/yelp_api.json'))\n",
+    "keys = get_keys(os.path.join('/Users/', os.getenv(\"LOGNAME\"), '.secret/yelp_api.json'))\n",
     "client_id = keys['client_id']\n",
     "api_key = keys['api_key']\n"
    ]
