Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,13 +110,13 @@
     "# Set up parameters\n",
     "\n",
     "# API Key\n",
-    "path = '/.secrets/creds.json'\n",
+    "path = '.secret/yelp_api.json'\n",
     "\n",
     "def get_keys(path):\n",
     "    with open(path) as f:\n",
     "        return json.load(f)\n",
     "\n",
-    "keys = get_keys(os.path.join('/Users/', os.getenv(\"LOGNAME\"), '.secret/yelp_api.json'))\n",
+    "keys = get_keys(os.path.join('/Users/', os.getenv(\"LOGNAME\"), ))\n",
     "client_id = keys['client_id']\n",
     "api_key = keys['api_key']\n"
    ]
