Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
     "# Set up parameters\n",
     "\n",
     "# API Key\n",
-    "path = '.secret/yelp_api.json'\n",
+    "path = '/.secret/yelp_api.json'\n",
     "\n",
     "def get_keys(path):\n",
     "    with open(path) as f:\n",
