Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,6 +90,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up parameters\n",
+    "\n",
+    "def get_keys(path):\n",
+    "    with open(path) as f:\n",
+    "        return json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -107,19 +120,12 @@
     }
    ],
    "source": [
-    "# Set up parameters\n",
-    "\n",
-    "def get_keys(path):\n",
-    "    with open(path) as f:\n",
-    "        return json.load(f)\n",
-    "\n",
     "# API Key\n",
     "path = '/.secret/yelp_api.json'\n",
     "\n",
-    "\n",
     "keys = get_keys(os.path.join('/Users/', os.getenv(\"LOGNAME\"), path))\n",
     "client_id = keys['client_id']\n",
-    "api_key = keys['api_key']\n"
+    "api_key = keys['api_key']"
    ]
   },
   {
