Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -103,6 +103,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/.secret/yelp_api.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.path.join('/Users/', os.getenv(\"LOGNAME\"), path))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
