Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
    ],
    "source": [
     "# API Key\n",
-    "path = /'/.secret/yelp_api.json'\n",
+    "path = '/Users/' + o'/.secret/yelp_api.json'\n",
     "\n",
     "keys = get_keys(os.path.join('/Users/', os.getenv(\"LOGNAME\"), path))\n",
     "client_id = keys['client_id']\n",
