Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -140,6 +140,7 @@
     "# API Key\n",
     "path = '/Users/' + os.getenv(\"LOGNAME\") + '/.secret/yelp_api.json'\n",
     "\n",
+    "#keys = get_keys(os.path.join('/Users/', os.getenv(\"LOGNAME\"), path))\n",
     "keys = get_keys(os.path.join('/Users/', os.getenv(\"LOGNAME\"), path))\n",
     "client_id = keys['client_id']\n",
     "api_key = keys['api_key']"
