Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,6 +120,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
